@@ -144,6 +144,7 @@ Views 6.x-3.0-dev
     o #941990 by master-of-magic: Link to node when using relationships could occasionally lose track and create bad links.
     o #833790: Click sort could break on fields that were actually formulas.
     o #965496 by ayalon: Update and Override broke validation of most views admin forms.
+    o #626732 by dereine: Added a test for analyze.
 
 Views 6.x-3.0-alpha3
     o #705668 by dereine: Fix glossary view, add tests for glossary view.
